prevent scrollbar from shifting centered content

--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -6,6 +6,12 @@
 
 body {
   font-size: 20px;
+
+  /**
+   * Prevent the scrollbar from shifting content 
+   * @see http://stackoverflow.com/a/30293718/451726
+   */
+  padding-left: calc(100vw - 100%);
 }
 
 @media(max-width: 1580px) {
